Eclipse_Java/编译实验/PA3/bin/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDefn
   3            | ClassDefn

   4  VariableDecl : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | DOUBLE
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDefn : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDecl
  17            | FieldList FunctionDefn
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDefn : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24               | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDecl
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock

  37  SimpleStmt : LValue '=' Expr
  38             | Call
  39             |

  40  Receiver : Expr '.'
  41           |

  42  LValue : Receiver IDENTIFIER
  43         | Expr '[' Expr ']'

  44  Call : Receiver IDENTIFIER '(' Actuals ')'

  45  Expr : LValue
  46       | Call
  47       | Constant
  48       | Expr '+' Expr
  49       | Expr '-' Expr
  50       | Expr '*' Expr
  51       | Expr '/' Expr
  52       | Expr '%' Expr
  53       | Expr EQUAL Expr
  54       | Expr NOT_EQUAL Expr
  55       | Expr '<' Expr
  56       | Expr '>' Expr
  57       | Expr LESS_EQUAL Expr
  58       | Expr GREATER_EQUAL Expr
  59       | Expr AND Expr
  60       | Expr OR Expr
  61       | '(' Expr ')'
  62       | '-' Expr
  63       | '!' Expr
  64       | READ_INTEGER '(' ')'
  65       | READ_LINE '(' ')'
  66       | THIS
  67       | NEW IDENTIFIER '(' ')'
  68       | NEW Type '[' Expr ']'

  69  Constant : INT_CONST
  70           | BOOL_CONST
  71           | STRING_CONST
  72           | DOUBLE_CONST
  73           | NULL

  74  Actuals : ExprList
  75          |

  76  ExprList : ExprList ',' Expr
  77           | Expr

  78  WhileStmt : WHILE '(' Expr ')' Stmt

  79  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  80  BreakStmt : BREAK

  81  IfStmt : IF '(' Expr ')' Stmt ElseClause

  82  ElseClause : ELSE Stmt
  83             |

  84  ReturnStmt : RETURN Expr
  85             | RETURN

  86  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDefn  goto 4


state 1
	ClassDefn : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDefn  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDefn  goto 6


state 4
	ClassList : ClassDefn .  (3)

	.  reduce 3


state 5
	ClassDefn : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDefn .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDefn : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDefn : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDefn : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDecl  (16)
	FieldList : FieldList . FunctionDefn  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDecl  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDefn  goto 23


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : DOUBLE .  (10)

	.  reduce 10


state 16
	Type : STRING .  (9)

	.  reduce 9


state 17
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 18
	FunctionDefn : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Type  goto 25


state 19
	ClassDefn : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDecl .  (16)

	.  reduce 16


state 21
	VariableDecl : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDefn : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDefn .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDefn : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDecl : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDefn : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDefn : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDefn : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDefn : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDefn : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDefn : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDefn : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDefn : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDefn : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDefn : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (39)
	Receiver : .  (41)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'{'  shift 42
	'}'  shift 65
	IDENTIFIER  reduce 41
	';'  reduce 39

	VariableDecl  goto 66
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 67
	Stmt  goto 68
	SimpleStmt  goto 69
	IfStmt  goto 70
	WhileStmt  goto 71
	ForStmt  goto 72
	ReturnStmt  goto 73
	PrintStmt  goto 74
	BreakStmt  goto 75
	LValue  goto 76
	Expr  goto 77
	Call  goto 78
	Receiver  goto 79
	Constant  goto 80


state 47
	Constant : NULL .  (73)

	.  reduce 73


state 48
	Expr : THIS .  (66)

	.  reduce 66


state 49
	WhileStmt : WHILE . '(' Expr ')' Stmt  (78)

	'('  shift 81
	.  error


state 50
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (79)

	'('  shift 82
	.  error


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (81)

	'('  shift 83
	.  error


state 52
	ReturnStmt : RETURN . Expr  (84)
	ReturnStmt : RETURN .  (85)
	Receiver : .  (41)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 41
	';'  reduce 85

	LValue  goto 84
	Expr  goto 85
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 53
	BreakStmt : BREAK .  (80)

	.  reduce 80


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (67)
	Expr : NEW . Type '[' Expr ']'  (68)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	IDENTIFIER  shift 87
	.  error

	Type  goto 88


state 55
	PrintStmt : PRINT . '(' ExprList ')'  (86)

	'('  shift 89
	.  error


state 56
	Expr : READ_INTEGER . '(' ')'  (64)

	'('  shift 90
	.  error


state 57
	Expr : READ_LINE . '(' ')'  (65)

	'('  shift 91
	.  error


state 58
	Constant : STRING_CONST .  (71)

	.  reduce 71


state 59
	Constant : INT_CONST .  (69)

	.  reduce 69


state 60
	Constant : BOOL_CONST .  (70)

	.  reduce 70


state 61
	Constant : DOUBLE_CONST .  (72)

	.  reduce 72


state 62
	Expr : '-' . Expr  (62)
	Receiver : .  (41)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 41

	LValue  goto 84
	Expr  goto 92
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 63
	Expr : '!' . Expr  (63)
	Receiver : .  (41)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 41

	LValue  goto 84
	Expr  goto 93
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 64
	Expr : '(' . Expr ')'  (61)
	Receiver : .  (41)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 41

	LValue  goto 84
	Expr  goto 94
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 65
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 66
	Stmt : VariableDecl .  (28)

	.  reduce 28


state 67
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 68
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 69
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 95
	.  error


state 70
	Stmt : IfStmt .  (30)

	.  reduce 30


state 71
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 72
	Stmt : ForStmt .  (32)

	.  reduce 32


state 73
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 96
	.  error


state 74
	Stmt : PrintStmt . ';'  (34)

	';'  shift 97
	.  error


state 75
	Stmt : BreakStmt . ';'  (35)

	';'  shift 98
	.  error


state 76
	SimpleStmt : LValue . '=' Expr  (37)
	Expr : LValue .  (45)

	'='  shift 99
	AND  reduce 45
	OR  reduce 45
	LESS_EQUAL  reduce 45
	GREATER_EQUAL  reduce 45
	EQUAL  reduce 45
	NOT_EQUAL  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	'%'  reduce 45
	'>'  reduce 45
	'<'  reduce 45
	'.'  reduce 45
	'['  reduce 45


state 77
	Receiver : Expr . '.'  (40)
	LValue : Expr . '[' Expr ']'  (43)
	Expr : Expr . '+' Expr  (48)
	Expr : Expr . '-' Expr  (49)
	Expr : Expr . '*' Expr  (50)
	Expr : Expr . '/' Expr  (51)
	Expr : Expr . '%' Expr  (52)
	Expr : Expr . EQUAL Expr  (53)
	Expr : Expr . NOT_EQUAL Expr  (54)
	Expr : Expr . '<' Expr  (55)
	Expr : Expr . '>' Expr  (56)
	Expr : Expr . LESS_EQUAL Expr  (57)
	Expr : Expr . GREATER_EQUAL Expr  (58)
	Expr : Expr . AND Expr  (59)
	Expr : Expr . OR Expr  (60)

	AND  shift 100
	OR  shift 101
	LESS_EQUAL  shift 102
	GREATER_EQUAL  shift 103
	EQUAL  shift 104
	NOT_EQUAL  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'>'  shift 111
	'<'  shift 112
	'.'  shift 113
	'['  shift 114
	.  error


state 78
	SimpleStmt : Call .  (38)
	Expr : Call .  (46)

	AND  reduce 46
	OR  reduce 46
	LESS_EQUAL  reduce 46
	GREATER_EQUAL  reduce 46
	EQUAL  reduce 46
	NOT_EQUAL  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	'%'  reduce 46
	'>'  reduce 46
	'<'  reduce 46
	'.'  reduce 46
	';'  reduce 38
	')'  reduce 38
	'['  reduce 46


state 79
	LValue : Receiver . IDENTIFIER  (42)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (44)

	IDENTIFIER  shift 115
	.  error


state 80
	Expr : Constant .  (47)

	.  reduce 47


state 81
	WhileStmt : WHILE '(' . Expr ')' Stmt  (78)
	Receiver : .  (41)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 41

	LValue  goto 84
	Expr  goto 116
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 82
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (79)
	SimpleStmt : .  (39)
	Receiver : .  (41)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 41
	';'  reduce 39

	SimpleStmt  goto 117
	LValue  goto 76
	Expr  goto 77
	Call  goto 78
	Receiver  goto 79
	Constant  goto 80


state 83
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (81)
	Receiver : .  (41)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	STRING_CONST  shift 58
	INT_CONST  shift 59
	BOOL_CONST  shift 60
	DOUBLE_CONST  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 41

	LValue  goto 84
	Expr  goto 118
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 84
	Expr : LValue .  (45)

	.  reduce 45


state 85
	Receiver : Expr . '.'  (40)
	LValue : Expr . '[' Expr ']'  (43)
	Expr : Expr . '+' Expr  (48)
	Expr : Expr . '-' Expr  (49)
	Expr : Expr . '*' Expr  (50)
	Expr : Expr . '/' Expr  (51)
	Expr : Expr . '%' Expr  (52)
	Expr : Expr . EQUAL Expr  (53)
	Expr : Expr . NOT_EQUAL Expr  (54)
	Expr : Expr . '<' Expr  (55)
	Expr : Expr . '>' Expr  (56)
	Expr : Expr . LESS_EQUAL Expr  (57)
	Expr : Expr . GREATER_EQUAL Expr  (58)
	Expr : Expr . AND Expr  (59)
	Expr : Expr . OR Expr  (60)
	ReturnStmt : RETURN Expr .  (84)

	AND  shift 100
	OR  shift 101
	LESS_EQUAL  shift 102
	GREATER_EQUAL  shift 103
	EQUAL  shift 104
	NOT_EQUAL  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
